Prevent overflow mobile scroll

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -128,6 +128,8 @@ footer a {
   position: absolute;
   visibility: hidden;
   opacity: 0;
+  width: 0;
+  overflow: hidden;
 }
 
 button {
